# tyler

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  NOTICE  README.md  roofer2tyler.py
.github/workflows/: docker.yml
docker/: debug.dockerfile  tyler-db.dockerfile  tyler.dockerfile
docs/: design_document.md
resources/data/: 3dbag_feature_x71.city.jsonl  3dbag_x00.city.json  README.md
resources/geof/: createGLB.json  createMulti.json  createMulti_.json  fix_attributes.py  metadata.json  process_feature.json  process_feature_multi.json  remove_empty_leafs.py  run_geof.sh  run_geof_buildings.sh  run_geof_terrain.sh  run_tyler.sh  run_tyler_buildings.sh  run_tyler_terrain.sh
resources/python/: adjust_geometric_error.py  convert_cityjsonfeatures.py  print_quadtree.py  remove_empty_leafs.py  split_to_features.py
src/: cli.rs  cli_db.rs  formats.rs  gltf_writer.rs  main.rs  main_db.rs  parser.rs  proj.rs  quadtree.rs  spatial_structs.rs
