[package]
name = "tyler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.0.32", features = ["cargo"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
walkdir = "2.3.2"
subprocess = "0.2.9"
rayon = "1.6.1"
# crates needed for the proj adaptation
proj-sys = { version = "0.23.1" }
num-traits = "0.2.14"
libc = "0.2.119"
thiserror = "1.0.30"
