[package]
name = "tyler"
version = "0.3.14"
edition = "2021"
authors = ["Balázs Dukai <balazs.dukai@3dgi.nl>", "Ravi Peters <ravi.peters@3dgi.nl>"]
description = "Create tiles from 3D city objects encoded as CityJSONFeatures."
repository = "https://github.com/3DGI/tyler"
homepage = "https://github.com/3DGI/tyler"
documentation = "https://github.com/3DGI/tyler"
readme = "README.md"
license = "Apache-2.0"
keywords = ["geo", "cityjson"]
categories = ["command-line-utilities", "science::geo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tyler"
path = "src/main.rs"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.0.32", features = ["cargo", "derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_repr = "0.1.10"
walkdir = "2.3.2"
subprocess = "0.2.9"
rayon = "1.6.1"
# crates needed for the proj adaptation
#proj-sys = { version = "0.23.1" , features = ["network"]}
proj-sys = { version = "0.23.1", features = ["network"], path = "proj/proj-sys" }
num-traits = "0.2.14"
libc = "0.2.119"
thiserror = "1.0.30"
bitvec = "1.0.1"
morton-encoding = "2.0.1"
bincode = "1.3.3"
gltf = "1.4"
earcutr = "0.2"
anyhow = "1.0"
